# lemonade

./: .travis.yml  CMakeLists.txt  README.md  auton.c  basicRobotCode.c  bonker  compile_commands.json  drive.c  functions.c  helloWorld.vex  index.html  intake.c  ints.c  lcdCodeChooserEx.c  leftPID.c  pneumatics.c  project.pros  puncher.c  rightPID.c  robot#0.1.c  robot#1.0.c  stupidRobot.c  testStraightness.c  variables.c  worstCaseScenario.c
Libraries/: demo.c  jPearmanPID.c
TShirtCannon/: HaydenScorpion.c  T-Shirt Cannon 2.0.c
acetousk/: compRobot1.c  xdrive.c
badOldIDKWhyCode/: auton.c  autonRun.c  drive.c  intake.c  leftPID.c  puncher.c  robot#0.1.c
chromeFalcons/: Clawbot Program.c  T-Shirt Cannon Thing  auton.c  bonker  chromeFalconsRobot1.c  compCodeEx.c  displaySampleCode.c  functions.c  robot#0.1.c  vexLCDExCode.c
code2017/: neglectThisFile
include/: API.h  main.h
oldCode/: functions.c
pictures/: Photo Sep 09, 2 22 09 PM.jpg.crdownload  Thumbs.db
pros/: README.md  compile_commands.json  project.pros
robotCIncludes/: AdvancedSensors.c  BEST_Function_Library.h  BuiltInVariables.XRef  BuiltInVariables.txt  DriveTrainTypes.h  EV3Intrinsics.h  EV3RobotCIntrinsics.h  EnumTypes.h  FirmwareVersion.h  GraphicLCD.h  I2CDrivers.h  I2CIntrinsics.h  I2CTypedefs.h  JoystickDriver.c  LoadBuildOptions.h  LoadBuildOptionsClearFields.h  LoadBuildOptionsLegoEV3.h  LoadBuildOptionsNXT.h  LoadBuildOptionsVexCortex.h  LoadBuildOptionsVexIQ.h  LoadBuildOptionsWindows.h  MenusAndIcons.c  NXT IOMap Access.h  NXTFileIODefs.h  NatLangInclude.c  NatLang_CORTEX.c  (+31 more)
(+50 files in other folders)
